# cursemol

./: CHANGELOG.md  CLAUDE.md  README.md  cursemol.py  pyproject.toml
.github/workflows/: tests.yml
src/cursemol/: __init__.py  canvas.py  chem.py  config.py  edit.py  sketcher.py  state.py  ui.py
tests/: test_canvas.py  test_chem.py
